--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1811,5 +1811,108 @@ stories:
   state: Indiana
   domain: http://www.hoosiertimes.com/
   link: https://www.hoosiertimes.com/allen-funeral-home-logo-th/image_00a340bc-2396-11ea-880b-5b58e794c254.html
+images:
+- name: curtain-curtain-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-post-modern.jpg
+- name: old-granary-field-granaryfield-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-diego-rivera1.jpg
+- name: art-museum-art-museum-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-plentiful.jpg
+- name: ellis-island-ellisisland-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-gred-mash.jpg
+- name: miamibeach-miamibeach-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-yellow-paper.jpg
+- name: white-house-lawn-white-house-window-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-aqua.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dark-dali.jpg
+- name: la-muse-hallway-mirrors-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hallway-mirrors-hotel.jpg
+- name: gypsy-wagon-gypsywagon-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dark-dali.jpg
+- name: ellis-island-ellis-island-room-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-crabapple.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-bright-sand.jpg
+- name: flower-barbed-wire-flower-barbed-wire-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-copper-circuit-2.jpg
+- name: berlinwall-DSC-0084-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dry-skin.jpg
+- name: berlinwall2-berlinwall-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dali-three.jpg
+- name: powerlines-power-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-light-dali.jpg
+- name: old-school-house-old-schoolhouse-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-kand-two.jpg
+- name: gypsymosaic-gypsy-eyes-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-mucha-mult.jpg
+- name: white-house-whitehouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-aqua.jpg
+- name: meadowbutterfly-meadow-butterfly-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dark-dali.jpg
+- name: gypsymosaic-gypsy-eyes-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-colored-circuits.jpg
+- name: docks-docks-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-clean-view.jpg
+- name: capital-battle-capitolbattle-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-post-modern.jpg
+- name: oldsmallboat-oldsmallboat-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-kandinsky-bv.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-aqua.jpg
+- name: oldtrain-oldtrain-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dry-skin.jpg
+- name: oldsmallboat-oldsmallboat-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-atari-missle.jpg
+- name: curtain-curtain-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colorful-dream.jpg
+- name: nazi-invasion-P5290036.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-P5290036.jpg
+- name: aws-s3-stories-new-beach-rocks-currents-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-beach-rocks-currents-kand-two.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-pablo-blue.jpg
+- name: walled-garden-walled-garden-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purple-pond.jpg
+- name: downtown-los-angeles-downtown-la-kandinsky-bv.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-kandinsky-bv.JPG
+- name: copper-circuit-surveillance-over-the-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-surveillance-over-the-city.jpg
+- name: fence-gorilla-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-blue-circuit.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dali-three.jpg
+- name: mosaic-face-mosaic-face-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-creativity.jpg
+- name: aws-s3-stories-schoolhouse-clouds-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-schoolhouse-clouds-dark-dali.jpg
+- name: fence-mexico-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-graham-sutherland.jpg
+- name: aws-s3-square-border-traffic-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-border-traffic-square.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-gan-vogh.jpg
+- name: status-berlin-status-berlin-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dry-skin.jpg
+- name: udnie-IMG_8352.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8352.jpg
+- name: supreme-court-supremecourt-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-pablo-blue.jpg
+- name: rockingchair-rockingchair-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-internet-numbers.jpg
+- name: stalin-time-shipping-container-yard-police-boat.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-shipping-container-yard-police-boat.jpg
+- name: flower-barbed-wire-flower-barbed-wire-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-yellow-collage.jpg
+- name: beach-rocks-beach-rocks-currents-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-bright-sand.jpg
+- name: nazi-invasion-supreme-court_36341562380_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-supreme-court_36341562380_o.jpg
+- name: paris-paris-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-smooth-ride.jpg
+- name: wind-mills-windmills-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-cinnamon-rolls.jpg
 ---
 Lady Trojans Cross Country Team Runs To Programs 15th State Championship.&nbsp;Guest Lineups For The Sunday News Shows.&nbsp;Colorado Gifts For That Crafty Person In Your Life.&nbsp;Flags Ordered At Half Staff Saturday For Tipton Mayor.&nbsp;Luper Joins Missouri As Offensive Assistant.&nbsp;Trump Heads To Florida While Impeachment Trial Still Cloudy.&nbsp;Kam Martin Never Quit On Auburn, Even When Others Might Have.&nbsp;Niwa Rings In The New Year With Japanese Tradition.&nbsp;
